--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="utf-8">
-    <title>Dark Souls 2 Cheat Sheet</title>
+    <title>Dark Souls 2 Scolar of the First Sin Cheat Sheet</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Cheat sheet for Dark Souls 2. Checklist of things to do, items to get etc.">
     <meta name="author" content="Stephen McNabb">
@@ -55,9 +55,7 @@
         <div id="intro">
 
             <p>
-                The following is a checklist and set of information I use when playing Dark Souls 2 to make sure I don't miss
-                an item, conversation or boss. I hope you find it useful. A big thanks goes out to the community
-                of contributors on the <a href="http://darksouls2.wikidot.com/">Dark Souls 2 Wiki</a> where
+While researching for a Dark Souls Lore series for the <a href="https://www.youtube.com/channel/UCGYiGUFThHIalitixKH10cQ?view_as=subscriber/"> Game Lore Archives</a>   I realized that while there were checklists of Dark Souls 1, 2 and 3 There was none that included the changes made by Dark Souls 2: Scholar of the First Sin Edition. So, I made this checklist to make sure I don’t miss a conversation, item, boss or run out of Fragmented Branches of Yore (There are only 16 Guaranteed in the game and 1 that will possibly drop for 18 Statues, one pointless one.) I also made it a little vaguer to mirror the Dark Souls 1 cheat sheet so it doesn’t ruin the exploration completely for new comers. I hope it helps you too. Thanks to Stephen McNabb for making the original Dark Souls II Cheat Sheet, as well as the community of contributors on the <a href="http://darksouls2.wikidot.com/">Dark Souls 2 Wiki</a> where
                 some of this information is borrowed from. If this is your first time visiting this page please check
                 out the Help section.
             </p>
